--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,1 +1,2 @@
 /* здесь подключите шрифты */
+@include font-face("Lato", 400, normal, url("../../fonts/montserrat/Montserrat-Regular.woff2") format("woff2"));
