--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,7 +1,15 @@
 /* GLOBAL */
+@import "./common/root.scss";
 @import "./common/variables.scss";
+@import "./common/mixins.scss";
 @import "./common/global.scss";
 @import "./common/fonts.scss";
+@import "./common/visually-hidden.scss";
 
 /* BLOCKS */
 @import "./blocks/header.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/container.scss";
+// @import "./blocks/main-container.scss";
