--- a/source/styles/common/root.scss
+++ b/source/styles/common/root.scss
@@ -2,14 +2,14 @@
   --white: #ffffff;
   --black: #000000;
   --base-primary: #7859cf;
-  --base-primary: #7859cf;
-  
+  --bg-basic: #f3ebe1;
+
   --gray-darken: #111111;
   --gray-dark: #222222;
   --gray-semi: #c4c4c4;
   --gray-light: #f2f2f2;
   --text-description: #444444;
-  --bg-basic: #68b738;
+
   --bg-secondary: #eaeaea;
   --bg-basic-opacity: rgba(104, 183, 56, 0.85);
   --social-icon: #666666;
