--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -7,4 +7,5 @@ $mobile-width: 320px;
 $mobile-content: 280px;
 
 // fonts
-$primary-font-family: "Lato", "Arial", sans-serif;
+$primary-font-family: "Montserrat", "Arial", sans-serif;
+$bold-font-family: "MontserratBold", "Arial", sans-serif;
