--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -7,9 +7,13 @@
 @import "./common/visually-hidden.scss";
 
 /* BLOCKS */
+@import "./blocks/button.scss";
 @import "./blocks/header.scss";
 @import "./blocks/page.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/container.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/features.scss";
+
 // @import "./blocks/main-container.scss";
