добавлены фильтры в каталог

--- a/source/styles/common/root.scss
+++ b/source/styles/common/root.scss
@@ -3,6 +3,7 @@
   --black: #000000;
   --base-primary: #7859cf;
   --bg-basic: #f3ebe1;
+  --bg-lightest-grey: #f8f8f8;
 
   --gray-darken: #111111;
   --gray-dark: #222222;
