--- a/source/styles/blocks/container.scss
+++ b/source/styles/blocks/container.scss
@@ -41,7 +41,8 @@
 
     // &.page__wrapper,
     // &.promo__wrapper,
-    &.features__wrapper {
+    &.features__wrapper,
+    &.basic-products__wrapper {
       width: calc($desktop-width - 80px);
     }
 
