--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -15,5 +15,5 @@
 @import "./blocks/container.scss";
 @import "./blocks/hero.scss";
 @import "./blocks/features.scss";
-
-// @import "./blocks/main-container.scss";
+@import "./blocks/basic-products.scss";
+@import "./blocks/cards.scss";
