--- a/source/styles/blocks/cards.scss
+++ b/source/styles/blocks/cards.scss
@@ -1,7 +1,6 @@
 .cards {
   margin: 0;
   padding: 0;
-  background-color: var(--white, #ff6347);
 
   @media (min-width: $tablet-width) {
     display: grid;
@@ -13,14 +12,16 @@
 
   @media (min-width: $desktop-width) {
     width: 1011px;
-    grid-template-columns: repeat(3, 460px);
+    grid-template-columns: repeat(3, 317px);
     gap: 30px;
     // margin-bottom: 68px;
   }
 }
 
 .cards__item {
-  // list-style: none;
+  background-color: var(--white, #ff6347);
+  list-style: none;
+  border-radius: 4px;
   // background-image: none;
   // border-top: 1px solid #ebebeb;
   // justify-content: center;
@@ -29,40 +30,44 @@
   // @media (min-width: $tablet-width) {
   //   border-top: none;
   // }
-}
+// }
 
-.cards__link-wrapper {
-  margin: 0 auto;
-  width: $mobile-width;
-  justify-content: center;
-  display: grid;
-  grid-template-columns: 140px 140px;
-  grid-template-rows: 107px 40px;
-  row-gap: 17px;
-  padding: 21px 20px 23px;
+// .cards__link-wrapper {
+//   margin: 0 auto;
+//   width: $mobile-width;
+//   justify-content: center;
+//   display: grid;
+//   grid-template-columns: 140px 140px;
+//   grid-template-rows: 107px 40px;
+//   row-gap: 17px;
+//   padding: 21px 20px 23px;
 
-  @media (min-width: $tablet-width) {
-    width: 100%;
-    background-image: linear-gradient(#ffffff 81px, #f2f2f2 81px);
-    padding: 10px 37px 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
+//   @media (min-width: $tablet-width) {
+//     width: 100%;
+//     background-image: linear-gradient(#ffffff 81px, #f2f2f2 81px);
+//     padding: 10px 37px 40px;
+//     display: flex;
+//     flex-direction: column;
+//     gap: 10px;
+//   }
 
   @media (min-width: $desktop-width) {
-    padding: 10px 39px 40px;
+    padding: 50px 30px 32px 28px;
     display: flex;
     flex-direction: column;
     gap: 12px;
   }
 
-  &:first-child {
-    @media (min-width: $tablet-width) {
-      // border-top: 1px solid var(--catalog-border, #ff6347);
-      border-top: none;
-    }
-  }
+//   &:first-child {
+//     @media (min-width: $tablet-width) {
+//       // border-top: 1px solid var(--catalog-border, #ff6347);
+//       border-top: none;
+//     }
+//   }
+}
+
+.cards__item--current {
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
 }
 
 .cards__link {
@@ -153,110 +158,3 @@
   }
 }
 
-.basic-products__order {
-
-  @media (min-width: $desktop-width) {
-    @include primary-font (14px, 1.43); // $font-size, $line-height
-    text-align: left;
-    display: grid;
-    grid-template-columns: 116px 141px;
-    // flex-direction: column;
-    // gap: 0;
-    margin-bottom: 20px;
-  }
-}
-
-.basic-products__price {
-  padding: 0;
-  margin: 0;
-
-  @media (min-width: $desktop-width) {
-    @include primary-font (20px, 1.6); // $font-size, $line-height
-    font-weight: 600;
-    text-align: left;
-    // flex-direction: column;
-    // gap: 0;
-  }
-}
-
-.basic-products__button--block {
-  // display: flex;
-  // align-items: center;
-  // gap: 6px;
-  // @include primary-font (14px, 1.43); // $font-size, $line-height
-  // color: var(--white, #ff6347);
-  background-color: var(--base-primary, #ff6347);
-  border: none;
-
-  @media (min-width: $desktop-width) {
-    width: 141px;
-    padding: 10px 20px;
-    display: grid;
-    grid-template-columns: 20px 75px;
-    gap: 6px;
-    border-radius: 4px;
-    // @include primary-font (14px, 1.43); // $font-size, $line-height
-    // padding: 8px 20px 8px 46px;
-  }
-
-  &:hover {
-    background-color: #5eaa2f;
-  }
-
-  &:active {
-    background-color: #5eaa2f;
-    opacity: 0.3;
-  }
-}
-
-.basic-products__icon {
-  display: block;
-  grid-column: 1 / 2;
-}
-
-.basic-products__text {
-  border: none;
-  display: block;
-  grid-column: 2 / -1;
-
-  @media (min-width: $desktop-width) {
-    @include primary-font (14px, 1.43); // $font-size, $line-height
-    font-weight: 400;
-    text-align: left;
-    background-color: var(--base-primary, #ff6347);
-    color: var(--white, #ff6347);
-  }
-}
-
-// .cards__button {
-  // @include primary-font (14px, 1.43); // $font-size, $line-height
-  // color: var(--white, #ff6347);
-  // background-color: var(--base-primary, #ff6347);
-  // border: none;
-  // padding: 10px 109px;
-  // cursor: pointer;
-  // grid-column: 1 / -1;
-  // grid-row: 2 / -1;
-  // text-transform: uppercase;
-
-  // @media (min-width: $tablet-width) {
-  //   padding: 10px 30px;
-  //   width: 250px;
-  // }
-
-  // @media (min-width: $desktop-width) {
-  //   border-radius: 4px;
-  //   @include primary-font (14px, 1.43); // $font-size, $line-height
-  //   padding: 8px 20px 8px 46px;
-  //   width: 141px;
-  // }
-
-  // &:hover {
-  //   background-color: #5eaa2f;
-  // }
-
-  // &:active {
-  //   background-color: #5eaa2f;
-  //   opacity: 0.3;
-  // }
-// }
