--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -17,3 +17,6 @@
 @import "./blocks/features.scss";
 @import "./blocks/basic-products.scss";
 @import "./blocks/cards.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/social.scss";
