--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -7,5 +7,7 @@ $mobile-width: 320px;
 $mobile-content: 280px;
 
 // fonts
-$primary-font-family: "Montserrat", "Arial", sans-serif;
-$bold-font-family: "MontserratBold", "Arial", sans-serif;
+$primary-font-family: "Montserrat Regular", "Arial", sans-serif;
+$medium-bold-font-family: "Montserrat Medium", "Arial", sans-serif;
+$semi-bold-font-family: "Montserrat Semi Bold", "Arial", sans-serif;
+$bold-font-family: "Montserrat Bold", "Arial", sans-serif;
