--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -142,7 +142,7 @@ justify-content: space-between;
 .main-nav__item {
   list-style: none;
   text-align: center;
-  padding: 32px 22px;
+  // padding: 32px 22px;
   // border-top: 1px solid var(--nav-border, #ff6347);
 
   @media (min-width: $tablet-width) {
@@ -153,6 +153,7 @@ justify-content: space-between;
   @media (min-width: $desktop-width) {
     // padding: 15px 0 11px;
   }
+
 }
 
 // .main-nav__item:last-child {
@@ -171,34 +172,42 @@ justify-content: space-between;
 .main-nav__user--link {
   @include primary-font (12px, 1.33); // $font-size, $line-height
   letter-spacing: 0.02em;;
+  padding: 20px;
   color: var(--black, #ff6347);
   background-color: var(--white, #ff6347);
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
 
+  @media (min-width: $tablet-width) {
+    border-bottom: 2px solid transparent;
+    padding: 30px 20px;
+    text-align: center;
+  }
 
-  // @media (min-width: $tablet-width) {
-  //   @include secondary-font (18px, 24px); // $font-size, $line-height
-  //   color: var(--black, #ff6347);
-  //   background-color: var(--white, #ff6347);
-  // }
 
-  // @media (min-width: $desktop-width) {
-  //   @include secondary-font (20px, 30px); // $font-size, $line-height
-  //   background-color: transparent;
-  // }
 
-  &:hover {
-    opacity: 0.6;
+  &:hover,
+  &:focus {
+    color: var(--base-primary, #ff6347);
   }
 
   &:active {
-    opacity: 0.3;
+    background-color: var(--base-secondary, #ff6347);
+
+    @media (min-width: $tablet-width) {
+      color: var(--base-primary, #ff6347);
+    }
+  }
+
+  &--active {
+    @media (min-width: $tablet-width) {
+      border-bottom: 2px solid var(--base-primary, #ff6347);
+    }
   }
 }
 
-// .main-nav__link--current {
+// .main-nav__link--active {
   // @media (min-width: $tablet-width) {
   //   position: relative;
 
