--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -15,6 +15,20 @@
   line-height: $line-height;
 }
 
+@mixin medium-bold-font-family ($font-size, $line-height) {
+  font-family: $medium-bold-font-family;
+  font-weight: 500;
+  font-size: $font-size;
+  line-height: $line-height;
+}
+
+@mixin semi-bold-font ($font-size, $line-height) {
+  font-family: $semi-bold-font-family;
+  font-weight: 600;
+  font-size: $font-size;
+  line-height: $line-height;
+}
+
 @mixin bold-font ($font-size, $line-height) {
   font-family: $bold-font-family;
   font-weight: 700;
