--- a/source/styles/common/root.scss
+++ b/source/styles/common/root.scss
@@ -2,6 +2,7 @@
   --white: #ffffff;
   --black: #000000;
   --base-primary: #7859cf;
+  --base-secondary: #f0ebff;
   --bg-basic: #f3ebe1;
   --bg-lightest-grey: #f8f8f8;
 
