--- a/source/styles/common/root.scss
+++ b/source/styles/common/root.scss
@@ -6,6 +6,20 @@
   --bg-basic: #f3ebe1;
   --bg-lightest-grey: #f8f8f8;
 
+  --base-white: #ffffff;
+  --base-grey: #bdbdbd;
+  --base-black: #333333;
+  --base-secondary: #f0ebff;
+  --primary-opacity: rgba(120, 89, 207, 0.25);
+  --primary-lighter: #9070ec;
+  --primary-darker: #593cac;
+  --light-grey: #e2e2e2;
+  --bg-light: #f8f8f8;
+  --bg-flat-white: #f3ebe1;
+  --bg-lavender-latte: #eae6fc;
+  --bg-esspresso: #e5e6e8;
+
+
   --gray-darken: #111111;
   --gray-dark: #222222;
   --gray-semi: #c4c4c4;
@@ -21,4 +35,5 @@
   --program-border: #d9d9d9;
   --example-border: #cdcdcd;
 }
+
 // резервный цвет принят "tomato": #ff6347
