--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,25 +1,44 @@
 .button {
-  @include primary-font (16px, 20px); // $font-size, $line-height
+  @include primary-font (16px, 1.5); // $font-size, $line-height
   color: var(--white, #ff6347);
   background-color: var(--base-primary, #ff6347);
   width: $mobile-content;
   cursor: pointer;
   border: none;
-
-
-  @media (min-width: $tablet-width) {
-    @include primary-font (16px, 1.5); // $font-size, $line-height
-    width: 113px;
+  width: 113px;
     padding: 8px 20px;
     border-radius: 4px;
+    font-style: none;
+    text-decoration: none;
+
+
+  // @media (min-width: $tablet-width) {
+  //   @include primary-font (16px, 1.5); // $font-size, $line-height
+  //   width: 113px;
+  //   padding: 8px 20px;
+  //   border-radius: 4px;
+  // }
+
+  &:hover,
+  &:focus {
+    background-color: var(--primary-lighter, #ff6347);
   }
 
-  &:hover {
-    background-color: #5eaa2f;
+  &:focus {
+    outline: none;
   }
 
   &:active {
-    background-color: #5eaa2f;
-    opacity: 0.3;
+    background-color: var(--primary-darker, #ff6347);
+  }
+
+  &--secondary {
+    background-color: var(--white, #ff6347);
+    color: var(--base-primary, #ff6347);
+  }
+
+  &--secondary:hover,
+  &--secondary:focus {
+    color: var(--white, #ff6347);
   }
 }
