--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -14,6 +14,7 @@
 @import "./blocks/main-nav.scss";
 @import "./blocks/container.scss";
 @import "./blocks/hero.scss";
+@import "./blocks/hero-swiper.scss";
 @import "./blocks/features.scss";
 @import "./blocks/basic-products.scss";
 @import "./blocks/cards.scss";
