--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -1,226 +1,181 @@
 .features {
+  padding: 50px 0 44px;
+
   @media (min-width: $tablet-width) {
-    margin: 0;
-    // border-bottom: 1px solid var(--nav-border, #ff6347);
+    padding: 60px 0 100px;
   }
 
   @media (min-width: $desktop-width) {
-    // border-bottom: none;
+    padding: 100px 0 120px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 100px 0 120px;
   }
 }
 
-.features__wrapper {
-  padding: 0;
-}
-
 .features__promo {
+  display: block;
   @include bold-font (12px, 1.33); // $font-size, $line-height
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: var(--base-primary, #ff6347);
   text-align: center;
-  margin: 0;
-  padding: 0;
-  // padding-top: 27px;
-  // padding-bottom: 25px;
-
-  @media (min-width: $tablet-width) {
-    @include bold-font(12px, 1.33); // $font-size, $line-height
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--base-primary, #ff6347);
-    text-align: center;
-    margin: 0;
-    // background-color: var(--white, #ff6347);
-    // padding-top: 40px;
-    // padding-bottom: 40px;
-  }
-
-  @media (min-width: $desktop-width) {
-    display: block;
-    @include bold-font (12px, 1.33); // $font-size, $line-height
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--base-primary, #ff6347);
-    text-align: center;
-    margin: 0;
-    // background-color: var(--white, #ff6347);
-    padding-top: 100px;
-  }
 }
 
 .features__title {
-  @include bold-font (36px, 40px); // $font-size, $line-height
+  @include bold-font (24px, 36px); // $font-size, $line-height
+  text-align: center;
   margin: 0;
-  // margin-bottom: 40px;
   color: var(--black, #ff6347);
+  margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
-    @include bold-font (60px, 1); // $font-size, $line-height
-    margin: 0;
-    // padding-top: 25px;
-    // padding-bottom: 31px;
+    @include bold-font (42px, 64px); // $font-size, $line-height
+    margin-bottom: 60px;
   }
 
   @media (min-width: $desktop-width) {
-    @include bold-font (42px, 1.52); // $font-size, $line-height
-    text-align: center;
-    // margin-bottom: 0;
-    // padding-bottom: 33px;
+    margin-bottom: 80px;
   }
 }
 
 .features__list {
+  display: grid;
+  gap: 32px;
   margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-bottom: 49px;
+  padding: 16px 0;
+  list-style: none;
 
   @media (min-width: $tablet-width) {
-    display: grid;
-    grid-template-columns: 230px 230px;
-    grid-template-rows: 280px 280px;
-    gap: 36px 153px;
-    counter-reset: list;  /* Инициируем счетчик */
-    margin-bottom: 50px;
+    padding: 0 10px;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px 30px;
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: repeat(4, 318px);
+    padding: 0;
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
-    gap: 30px;
-    margin-bottom: 24px;
+    gap: 50px 30px;
+    // margin-bottom: 24px;
   }
 }
 
 .features__item {
-  display: flex;
-  column-gap: 20px;
-  list-style: none;
-  order: 1;
+  text-align: center;
 
   &::after {
     content: "";
     display: block;
-    width: 60px;
-    height: 60px;
-    background-color: var(--white, #ff6347);
+    width: 52px;
+    height: 56px;
+    margin: 0;
+    margin-left: 40px;
+    // margin: 0 auto;
+    // background-color: var(--white, #ff6347);
     background-image: var(--icon);
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: var(--size);
+    background-position: center center;
+    // background-size: var(--size);
   }
 
   @media (min-width: $tablet-width) {
     display: grid;
-    gap: 0 29px;
+    // gap: 0 29px;
     grid-template-columns: 318px;
     grid-template-rows: 56px min-content auto;
+    position: relative;
+    padding-left: 72px;
+    text-align: left;
 
     &::after {
-      display: flex;
-      width: 52px;
-      height: 56px;
-      margin: 0;
+      // display: flex;
+      // width: 52px;
+      // height: 56px;
+      // margin: 0;
       grid-row: 1 / 2;
       text-align: center;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+    text-align: center;
+
+    &::after {
+      display: block;
+      text-align: center;
+      margin-left: 130px;
+
+      // margin-bottom: 20px;
     }
   }
 }
 
 .features__speed {
   --icon: url("../../icons/icon-speed.svg");
-  --size: 50px 56px;
+  // --size: 50px 56px;
 }
 
 .features__fit {
   --icon: url("../../icons/icon-fit.svg");
-  --size: 52px 56px;
+  // --size: 52px 56px;
 }
 
 .features__energy {
   --icon: url("../../icons/icon-energy.svg");
-  --size: 42px 56px;
+  // --size: 42px 56px;
 }
 
 .features__eco {
   --icon: url("../../icons/icon-eco.svg");
-  --size: 46px 56px;
+  // --size: 46px 56px;
 }
 
 .features__name {
   margin: 0;
-  width: 200px;
-  padding-top: 2px;
+  // width: 200px;
+  // padding-top: 2px;
   // order: 2;
+  margin-bottom: 4px;
 
-  @include bold-font (14px, 18px); // $font-size, $line-height
+  @include bold-font (18px, 32px); // $font-size, $line-height
   color: var(--black, #ff6347);
   // z-index: 1;
 
   @media (min-width: $tablet-width) {
-    @include bold-font  (16px, 24px); // $font-size, $line-height
+    @include bold-font (24px, 36px); // $font-size, $line-height
     color: var(--black, #ff6347);
     // z-index: 1;
-    padding-top: 20px;
-    width: 100%;
-    grid-row: 3 / -1;
-  }
-
-  @media (min-width: $desktop-width) {
-    @include bold-font  (16px, 24px); // $font-size, $line-height
+    // padding-top: 20px;
+    // width: 100%;
     grid-row: 2 / 3;
-    color: var(--black, #ff6347);
-    z-index: 1;
-    text-align: center;
-    padding-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 10px;
   }
 }
 
 .features__description {
   margin: 0;
-  width: 200px;
-  padding-top: 2px;
-  order: 2;
+  color: var(--black, #ff6347);
+  // width: 200px;
+  // padding-top: 2px;
+  // order: 2;
 
   @include primary-font (14px, 18px); // $font-size, $line-height
-  color: var(--black, #ff6347);
-  z-index: 1;
+
+  // z-index: 1;
 
   @media (min-width: $tablet-width) {
     @include primary-font (16px, 24px); // $font-size, $line-height
-    color: var(--text-description, #ff6347);
+    // color: var(--text-description, #ff6347);
     // z-index: 1;
-    padding-top: 10px;
-    width: 100%;
+    // padding-top: 10px;
+    // width: 100%;
     grid-row: 3 / -1;
   }
-
-  @media (min-width: $desktop-width) {
-    @include primary-font (16px, 24px); // $font-size, $line-height
-    color: var(--text-description, #ff6347);
-    z-index: 1;
-    text-align: center;
-    padding-top: 30px;
-  }
-
-  // @media (min-width: $mobile-width) {
-  //   br {
-  //     display: none;
-  //   }
-  // }
-
-  // @media (min-width: $mobile-width-only) {
-  //   br {
-  //     display: initial;
-  //   }
-  // }
-
-  // @media (min-width: $tablet-width) {
-  //   br {
-  //     display: initial;
-  //   }
-  // }
 }
