корректирует фильтр в блоке  basic-product

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -21,3 +21,7 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
+@import "blocks/filters";
+@import "blocks/radio";
+@import "blocks/range";
+@import "blocks/checkbox";
