--- a/source/styles/blocks/cards.scss
+++ b/source/styles/blocks/cards.scss
@@ -1,69 +1,53 @@
+// .cards {
+//   margin: 0;
+//   padding: 0;
+
+//   @media (min-width: $tablet-width) {
+//     display: grid;
+//     grid-template-columns: repeat(2, 324px);
+//     gap: 62px 60px;
+//   }
+
+//   @media (min-width: $desktop-width) {
+//     width: 1011px;
+//     grid-template-columns: repeat(3, 317px);
+//     gap: 30px;
+//   }
+// }
+
 .cards {
-  margin: 0;
+  display: grid;
+  gap: 20px;
+  margin: 0 0 40px;
   padding: 0;
+  list-style: none;
 
   @media (min-width: $tablet-width) {
-    display: grid;
-    grid-template-columns: repeat(2, 324px);
-    gap: 62px 60px;
-    // margin-bottom: 72px;
-    // padding: 0;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+    margin-bottom: 70px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1011px;
-    grid-template-columns: repeat(3, 317px);
-    gap: 30px;
-    // margin-bottom: 68px;
+    grid-column: 2/-1;
+    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 60px;
   }
 }
 
 .cards__item {
+  padding: 40px 20px 20px;
   background-color: var(--white, #ff6347);
   list-style: none;
   border-radius: 4px;
-  // background-image: none;
-  // border-top: 1px solid #ebebeb;
-  // justify-content: center;
-
-
-  // @media (min-width: $tablet-width) {
-  //   border-top: none;
-  // }
-// }
-
-// .cards__link-wrapper {
-//   margin: 0 auto;
-//   width: $mobile-width;
-//   justify-content: center;
-//   display: grid;
-//   grid-template-columns: 140px 140px;
-//   grid-template-rows: 107px 40px;
-//   row-gap: 17px;
-//   padding: 21px 20px 23px;
-
-//   @media (min-width: $tablet-width) {
-//     width: 100%;
-//     background-image: linear-gradient(#ffffff 81px, #f2f2f2 81px);
-//     padding: 10px 37px 40px;
-//     display: flex;
-//     flex-direction: column;
-//     gap: 10px;
-//   }
+  text-align: left;
 
   @media (min-width: $desktop-width) {
     padding: 50px 30px 32px 28px;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+    // display: flex;
+    // flex-direction: column;
+    // gap: 12px;
   }
-
-//   &:first-child {
-//     @media (min-width: $tablet-width) {
-//       // border-top: 1px solid var(--catalog-border, #ff6347);
-//       border-top: none;
-//     }
-//   }
 }
 
 .cards__item--current {
@@ -80,20 +64,6 @@
   @media (min-width: $tablet-width) {
     margin: 0 auto;
     height: 210px;
-  }
-}
-
-.cards__link-more {
-  display: block;
-  text-align: center;
-  padding-bottom: 24px;
-
-  @media (min-width: $tablet-width) {
-    padding-bottom: 47px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-bottom: 36px;
   }
 }
 
@@ -157,4 +127,3 @@
     margin-bottom: 20px;
   }
 }
-
