--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -3,3 +3,8 @@
   background-color: var(--bg-basic, #ff6347);
   display: block;
 }
+
+.contacts__map-image {
+  width: 100%;
+  object-fit: cover;
+}
