--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -21,7 +21,9 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
-@import "blocks/filters";
-@import "blocks/radio";
-@import "blocks/range";
-@import "blocks/checkbox";
+@import "./blocks/filters.scss";
+@import "./blocks/radio.scss";
+@import "./blocks/range.scss";
+@import "./blocks/checkbox.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/logo.scss";
