--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,55 +1,57 @@
-.social__item {
+.social {
   margin: 0;
+  padding: 0;
   display: flex;
-  flex-direction: row;
+  justify-content: flex-end;
+  flex-wrap: wrap;
   list-style: none;
+}
+
+.social__item:not(:first-child) {
+  margin-left: 20px;
 }
 
 .social__link {
   display: block;
-  padding: 13px 16px 13px 12px;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  color: var(--base-grey, #ff6347);
+  border-radius: 4px;
+  transition: color 0.2s ease-in, background-color 0.2s ease-in;
 
   &::before {
     content: "";
     display: block;
-    mask-image: var(--icon);
-    mask-repeat: no-repeat;
-    mask-position: center;
-    mask-size: contain;
-    width: var(--width);
-    height: var(--height);
-    background-color: var(--social-icon, #ff6347);
+    width: 100%;
+    height: 100%;
+    background-color: currentColor;
   }
 
-  &:hover::before,
-  &:focus::before {
-    background-color: var(--bg-basic, #ff6347);
+  &--vk::before {
+    mask-image: url(".../../icons/stack.svg#icon-vk");
   }
 
-  &:active::before {
-    opacity: 0.3;
-    background-color: var(--bg-basic, #ff6347);
+  &--pinterest::before {
+    mask-image: url("../../icons/stack.svg#icon-pinterest");
   }
 
-  @media (min-width: $tablet-width) {
-    padding: 14px 14px 10px;
+  &--ok::before {
+    mask-image: url("../../icons/stack.svg#icon-ok");
   }
-}
 
-.social__link--vkontakte {
-  --icon: url("../../icons/stack.svg#icon-vk");
-  --width: 27px;
-  --height: 17px;
-}
+  &:hover,
+  &:focus {
+    color: var(--base-primary, #ff6347);
+    background-color: var(--base-secondary, #ff6347);
+  }
 
-.social__link--youtube {
-  --icon: url("../../icons/icon-youtube.svg");
-  --width: 24px;
-  --height: 19px;
-}
+  &:focus {
+    outline: none;
+  }
 
-.social__link--telegram {
-  --icon: url("../../icons/icon-telegram.svg");
-  --width: 20px;
-  --height: 17px;
+  &:active {
+    color: var(--base-primary, #ff6347);
+    background-color: var(--primary-opacity, #ff6347);
+  }
 }
