--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,5 +1,61 @@
-.header {
-  background-color: #663399;
-  color: #ffffff;
-  padding: 10px 15px;
+.header__layout {
+  position: relative;
+  display: grid;
+  grid-template-columns: min-content 1fr min-content;
+  padding-right: 0;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: min-content 1fr 120px;
+    gap: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: min-content 1fr 25%;
+    gap: 20px;
+  }
+}
+
+.header__logo {
+  display: flex;
+  align-items: center;
+  align-self: start;
+  margin-top: 12px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 22px;
+  }
+}
+
+.header__link {
+  display: block;
+  padding: 22px 22px;
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  letter-spacing: 0.24px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--black, #ff6347);
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: var(--base-primary, #ff6347);
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:active {
+    background-color: var(--base-secondary, #ff6347);
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 32px 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 32px 20px;
+  }
 }
