--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -5,13 +5,14 @@
 @import "./common/global.scss";
 @import "./common/fonts.scss";
 @import "./common/visually-hidden.scss";
+@import "../vendor/noUiSlider/nouislider.css";
 
 /* BLOCKS */
 @import "./blocks/button.scss";
 @import "./blocks/header.scss";
 @import "./blocks/page.scss";
-@import "./blocks/main-header.scss";
-@import "./blocks/main-nav.scss";
+// @import "./blocks/main-header.scss";
+// @import "./blocks/main-nav.scss";
 @import "./blocks/container.scss";
 @import "./blocks/hero.scss";
 @import "./blocks/hero-swiper.scss";
@@ -26,4 +27,6 @@
 @import "./blocks/range.scss";
 @import "./blocks/checkbox.scss";
 @import "./blocks/footer.scss";
-@import "./blocks/logo.scss";
+@import "./blocks/logo";
+@import "./blocks/user-navigation";
+@import "./blocks/site-navigation";
