--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -28,7 +28,7 @@
 
 .header__link {
   display: block;
-  padding: 22px 22px;
+  padding: 22px;
   font-size: 12px;
   line-height: 16px;
   font-weight: 500;
