--- a/source/styles/blocks/site-navigation.scss
+++ b/source/styles/blocks/site-navigation.scss
@@ -96,7 +96,7 @@
 }
 
 .site-navigation__link {
-  padding: 20px 20px;
+  padding: 20px;
   border-bottom: 1px solid var(--primary-opacity, #ff6347);
   transition: box-shadow 0.2s ease-in;
 
