--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -6,5 +6,10 @@
 
 .contacts__map-image {
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  display: block;
+
+  @media (min-width: $tablet-width) {
+    object-fit: cover;
+  }
 }
