--- a/source/styles/blocks/site-navigation.scss
+++ b/source/styles/blocks/site-navigation.scss
@@ -1,6 +1,6 @@
 .site-navigation--header {
   // order: 2;
-  grid-column: 3 / -1;
+  // grid-column: 3 / -1;
 
   @media (min-width: $tablet-width) {
     margin-left: 5px;
@@ -35,37 +35,8 @@
   }
 }
 
-// .site-navigation--no-js {
-//   grid-column: 3 /-1;
-// }
-
-.site-navigation--no-js .site-navigation__toggle {
-  @media (max-width: $mobile-width) {
-    display: none;
-  }
-}
-
-.site-navigation--no-js .site-navigation__list {
-  @media (max-width: $mobile-width) {
-    position: static;
-    display: block;
-    margin-left: -20px;
-  }
-}
-
-.site-navigation--open .site-navigation__toggle {
-  @media (max-width: $mobile-width) {
-    padding: 24px;
-
-    &::before {
-      width: 12px;
-      mask-image: url("../../icons/stack.svg#icon-menu-close");
-    }
-  }
-}
-
-.site-navigation--open .site-navigation__list {
-  @media (max-width: $mobile-width) {
+@media (max-width: $mobile-width) {
+  .site-navigation--open .site-navigation__list {
     position: absolute;
     display: block;
     left: 0;
@@ -110,5 +81,48 @@
   @media (min-width: $tablet-width) {
     padding: 32px 20px;
     border-bottom: none;
+  }
+}
+
+.site-navigation--no-js {
+  .site-navigation__toggle {
+    display: none;
+  }
+}
+
+.site-navigation--no-js {
+  .site-navigation__list {
+    position: static;
+    display: block;
+    margin-left: -20px;
+  }
+}
+
+.site-navigation--no-js {
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
+}
+
+.site-navigation--open {
+  // grid-row: 2 / 3;
+  // grid-column: 1 / -1;
+
+  .site-navigation__list {
+
+    position: absolute;
+    display: block;
+    left: 0;
+    right: 0;
+    top: 100%;
+    z-index: 2;
+  }
+
+  .site-navigation__toggle {
+    padding: 24px;
+
+    &::before {
+      width: 12px;
+      mask-image: url("../../icons/stack.svg#icon-menu-close");
+    }
   }
 }
