--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -30,3 +30,4 @@
 @import "./blocks/logo";
 @import "./blocks/user-navigation";
 @import "./blocks/site-navigation";
+@import "./blocks/pagination.scss";
