--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -29,7 +29,7 @@
   }
 
   &--vk::before {
-    mask-image: url(".../../icons/stack.svg#icon-vk");
+    mask-image: url("../../icons/stack.svg#icon-vk");
   }
 
   &--pinterest::before {
