--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -1,9 +1,3 @@
-// .footer .container {
-//   @media (max-width: $mobile-max-width) {
-//     padding: 0;
-//   }
-// }
-
 .footer__wrapper {
   @media (min-width: $tablet-width) {
     display: grid;
@@ -135,7 +129,7 @@
   }
 
   &--contacts-address::before {
-    mask-image: url("../../img/icons/stack.svg#address");
+    mask-image: url("../../icons/stack.svg#icon-address");
   }
 
   &--contacts-telephone {
@@ -143,7 +137,7 @@
     padding: 2px 0;
 
     &::before {
-      mask-image: url("../../img/icons/stack.svg#phone");
+      mask-image: url("../../icons/stack.svg#icon-phone");
     }
   }
 }
@@ -170,6 +164,8 @@
   align-items: center;
   margin-left: 3px;
   transition: 0.2s ease-in;
+  text-decoration: none;
+  color: var(--base-grey, #ff6347);
 
   &::after {
     content: "";
@@ -178,7 +174,7 @@
     height: 16px;
     margin-left: 4px;
     background-color: currentColor;
-    mask-image: url("../../img/icons/stack.svg#html_academy_logo");
+    mask-image: url("../../icons/stack.svg#icon-html-academy");
   }
 
   &:hover,
